.metadata/.plugins/org.eclipse.cdt.ui/Test006-uSonic-interrupt.build.log
17:23:36 **** Build of configuration Debug for project Test006-uSonic-interrupt ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/myLib.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/myLib.d" -MT"Core/Src/myLib.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/myLib.o"
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:73:29: error: 'htim1' undeclared (first use in this function); did you mean 'htim3'?
   73 |                         t1= htim1.Instance->CNT;
      |                             ^~~~~
      |                             htim3
../Core/Src/main.c:73:29: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:84:9: warning: implicit declaration of function 'Trigger' [-Wimplicit-function-declaration]
   84 |         Trigger();
      |         ^~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:120:3: warning: implicit declaration of function 'ProgramStart' [-Wimplicit-function-declaration]
  120 |   ProgramStart("uSonic Test = GPIO Interrupt");
      |   ^~~~~~~~~~~~
../Core/Src/main.c:129:11: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  129 |           printf("distance = %f\r\n",dist);
      |           ^~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:129:11: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
  129 |           printf("distance = %f\r\n",dist);
      |           ^~~~~~
../Core/Src/main.c:129:11: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c: In function '__io_getchar':
../Core/Src/myLib.c:10:41: warning: passing argument 2 of 'HAL_UART_Receive' from incompatible pointer type [-Wincompatible-pointer-types]
   10 |         while(HAL_UART_Receive(&huart2, &ch, 1, 10) != HAL_OK)
      |                                         ^~~
      |                                         |
      |                                         int *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/myLib.c:1:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:746:72: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'int *'
  746 | HAL_StatusTypeDef HAL_UART_Receive(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                               ~~~~~~~~~^~~~~
../Core/Src/myLib.c: In function '__io_putchar':
../Core/Src/myLib.c:18:44: warning: passing argument 2 of 'HAL_UART_Transmit' from incompatible pointer type [-Wincompatible-pointer-types]
   18 |                 HAL_UART_Transmit(&huart2, &ch, 1, 10);
      |                                            ^~~
      |                                            |
      |                                            int *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/myLib.c:1:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:745:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'int *'
  745 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/myLib.c: In function '__io_getchar':
../Core/Src/myLib.c:14:1: warning: control reaches end of non-void function [-Wreturn-type]
   14 | }
      | ^
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j24 all" terminated with exit code 2. Build might be incomplete.

17:23:37 Build Failed. 3 errors, 7 warnings. (took 392ms)

